--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,7 @@ title: "BMB 521: Data analysis in R"
 date: '12 March 2024'
 output: 
   html_document:
-    theme: spacelab
+    theme: cerulean
     number_sections: true
     highlight: monochrome
     fig_width: 8
@@ -156,14 +156,14 @@ Stop here before class!
 </div>
 
 ```{r echo=F}
-knitr::knit_exit()
+#knitr::knit_exit()
 ```
 
 ***
 
 # Setting up your environment
 
-Much like you might set up your bench before starting an experiment, or do your mise en place before cooking a meal, it pays to take some time to set up your digital work space before starting an analysis. You should always keep a record of all the tools and commands you used to perform your analysis. This is essential to reproducibility! At a minimum, you can create a new R script (File > New File > R Script). If you want to get very fancy, you can create a R markdown document. This lets you embed your analysis and its results into a single document which can be shared with collaborators/reviewers/etc... guess what this document is?
+Much like you might set up your bench before starting an experiment, or do your mise en place before cooking a meal, it pays to take some time to set up your digital work space before starting an analysis. You should always keep a record of all the tools and commands you used to perform your analysis. This is essential to reproducibility! At a minimum, you can create a new R script (File > New File > R markdown). R markdown documents combine raw code, with free-text sections and function like an electronic note book for your analysis. This is great to document your analysi and can be shared later with collaborators/reviewers/etc... guess what this document is? Visit [here](https://github.com/BisanzLab/BMMB521_SP24/blob/main/index.Rmd) to see the markdown document for this class!
 
 As a first pass we can load our libraries that we will need as below:
 
@@ -179,27 +179,27 @@ library(lme4)
 
 Next we can make sure we have set our working directory. This ensures we will be able to properly find our files. This was set up before class and is likely on your desktop called `~/Desktop/BMS270_tutorial`. We can explicitly set our working directory with the `setwd()` function.
 
-```{r}
-setwd("~/Desktop/BMS270_tutorial")
+```{r eval=F}
+setwd("~/Desktop/BMMB521_tutorial")
 ```
 
 Next we might want to set up some directories for our outputs as below:
 
 ```{r}
 dir.create("figures")
-dir.create("tables")
+dir.create("backups")
 ```
 
-Finally, it is always helpful to keep a record of your work environment. This can easily be accomplished with `SessionInfo()`:
+Finally, it is always helpful to keep a record of your work environment. This can easily be accomplished with `SessionInfo()` as below. Having a list of all of the packages you used and the versions can be very helpful later when writing a manuscript!
 
 ```{r}
 sessionInfo()
 ```
 
-Before going forward, we will read in our metadata table with the help of the `read_tsv()` function.
+Before going forward, we will read in our metadata table with the help of the `read_tsv()` function. At any point you can click on your data in the top right corner of R studio and it will open in a tab for you to look at!
 
 ```{r}
-metadata<-read_tsv("metadata.tsv") %>% mutate(Group=factor(Group, c("pre-diet","post-diet")))
+metadata<-read_tsv("metadata.tsv")
 ```
 
 We can then explore it as below:
@@ -210,6 +210,11 @@ metadata %>% count(Group, Time_days)
 
 You can see that we have 2 groups (pre- and post-diet), 4 time points (1, 7, 14, and 21 days), and that there are 3 mice per time point.  The last two columns are storing the location of the sequencing data).
 
+While we are at it, we are going to define an explicit order to the groups which will be reflected in all future graphs/analyses. We will place pre-diet before post-diet:
+
+```{r}
+metadata <- metadata %>% mutate(Group=factor(Group, c("pre-diet","post-diet")))
+```
 
 # Processing Raw Data
 
@@ -227,7 +232,7 @@ The first line contains a unique identifier for each read starting with an `@` s
 
 ## Data Quality
 
-Given that it is hard to quite hard to read the quality Profile by eye, we can instead plot it using the `plotQualityProfile()` function.
+Given that it is hard to quite hard to read the quality Profile by eye, we can instead plot it using the `plotQualityProfile()` function. Here we are going to grab the first 3 samples `[1:3]` from each of the columns and add a title to the plot `ggtitle()`.
 
 ```{r}
 plotQualityProfile(metadata$Read1[1:3]) + ggtitle("Forward Read Quality (R1)")
@@ -254,7 +259,7 @@ trimlog <- filterAndTrim(
                       rev=metadata$Read2,
                       filt=metadata$Read1_filtered,
                       filt.rev=metadata$Read2_filtered,
-                      compress=TRUE,
+                      compress=TRUE, # use gzip compression to save space
                       truncLen=c(240,140), # trim back the reads on the 3' end
                       trimLeft=5, # remove 5 bases from the beginning as these q scores may not be reliable
                       maxEE=2, # no more than 2 expected errors per reads
@@ -364,12 +369,12 @@ rownames(asv_table)<-sequences$ASV
 We can save an image of our session just in the event of a problem so that we can go back and reload our computed data:
 
 ```{r echo=F}
-save.image("images/processing.Rdata")
+save.image("backups/processing.Rdata")
 ```
 
 Finally, to free up some memory, we can remove all the intermediate data.
 
-```{r}
+```{r eval=F}
 rm(forward_denoised, forward_error, merged_reads, merged_table, reverse_denoised, reverse_error, trimlog)
 ```
 
@@ -385,7 +390,7 @@ Consider the following two samples, which would you say is more diverse?
 tibble(Organism=c("E. coli","L. rhamnosus","S. aureus"), SampleA=c(99,1,1), SampleB=c(50,50,0)) %>% knitr::kable()
 ```
 
-Perhaps the simplest metric you could think of is the number of species (or in our case ASVs) present in an ecosystem which is commonly applied. If we apply this metric to our fake data above, we would conclude that SampleA is more diverse (it has 3 organisms present vs 2). Others are a little bit more complex such as Shannon Diversity which use both the number of species present and their evenness. In the case of the fake data above, Sample B is more diverse (0.69 vs 0.11). Today we will use the number of observed SVs and the Shannon diversity on our actual data. *Note: in the vast majority of cases these values will be highly correlated.*
+Perhaps the simplest metric you could think of is the number of species (or in our case ASVs) present in an ecosystem which is commonly applied. If we apply this metric to our fake data above, we would conclude that SampleA is more diverse (it has 3 organisms present vs 2). Others are a little bit more complex such as Shannon Diversity which use both the number of species present and their evenness. In the case of the fake data above, Sample B is more diverse (0.69 vs 0.11). Today we will use the number of observed ASVs and the Shannon diversity on our actual data. *Note: in the vast majority of cases these values will be highly correlated.*
 
 Before going forward, we also need to consider the effect of sampling depth and account for it by subsampling/rarefying the data. This is a way to normalize for sequencing depth <i>in silico</i> which is appropriate here, but [may not always be advisable](http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1003531). 
 
@@ -411,21 +416,30 @@ Now that we have our table made, we can start making our plot.
 ```{r}
 diversity_table %>%
   pivot_longer(c(Shannon, Obs_ASVs), names_to="Metric", values_to="Diversity") %>%
-  ggplot(aes(x=Time_days, y=Diversity, fill=Group)) +
-  stat_summary(geom="ribbon", alpha=0.5) +
-  geom_jitter(width=1, height=0, shape=21) +
+  ggplot(aes(x=Time_days, y=Diversity, color=Group)) +
+  stat_summary(geom="line") +
+  stat_summary(geom="errorbar", width=0.5, fun.data=mean_sd) +
+  geom_jitter(width=1, height=0) +
   facet_wrap(~Metric, scales="free") +
   theme_q2r() +
   xlab("Days Post Colonization") +
   ylab("Alpha Diversity") +
-  scale_fill_manual(values=c("cornflowerblue","indianred"))
+  scale_color_manual(values=c("cornflowerblue","indianred"))
 
 ggsave("figures/diversity.pdf", height=3, width=5)
 ```
 
 **Question: What trends do you see in the data?**
 
-Now we can do a statistical test accounting for the nature of the data:
+Now we can do a statistical test accounting for the nature of the data. Let's start by asking if the number of ASVs is significantly different 1 day after colonization?
+
+```{r}
+diversity_table %>%
+  filter(Time_days==1) %>%
+  t.test(Shannon~Group, data=.)
+```
+
+Now what if instead, we wanted to ask about the change over time? We can used a mixed model to account for repeated measures... but what distribution is the count of ASVs most likely to resemble?
 
 ```{r}
 fit<-glmer.nb(Obs_ASVs~Group*Time_days+(1|MouseID), data=diversity_table)
@@ -483,7 +497,7 @@ ggsave("figures/pcoa.pdf", height=2, width=3)
 We can also do a statistical test for support using Adonis/Permanova:
 
 ```{r}
-adonis(clr_euc~Group*Time_days, data=metadata , strata = metadata$MouseID, permutations = 9999)
+adonis2(clr_euc~Group*Time_days, data=metadata , strata = metadata$MouseID, permutations = 9999)
 ```
 
 **Question: What trend do you see in this data? What would you conclude about the similarity between diet groups over time?**
@@ -526,7 +540,7 @@ The stacked bar plot is a staple of microbiome manuscripts. We can easily create
 ```{r}
 taxa_sums<-summarize_taxa(asv_table, taxonomy)
 
-taxa_barplot(features = taxa_sums$Phylum, metadata = metadata, category = "Group")
+taxa_barplot(features = taxa_sums$Genus, metadata = metadata, category = "Group")
 ggsave("figures/barplot.pdf", height=3, width=8)
 ```
 
@@ -582,9 +596,9 @@ ggsave("figures/heatmap.pdf", height=4, width=6)
 
 Ultimately, what people often care most about is individual features/strains. After all, scientists tend to take a reductionist approach and want to identify novel pathogens or new probiotics in microbiome data. While fundamentally, 16S rRNA gene sequencing is a tool designed to look at communities as a whole, many approaches exist for looking at individual features. There are also a wide range of approaches and ethos for these. Generally speaking, it is a good idea to use multivariate statistics such as the beta diversity analysis above before looking for differences in individual taxa.
 
-While there is not necessarily a single correct way to find significant taxa, there is certainly a wrong way: **Do not take raw sequence counts and do a series of uncorrected t-tests**. Remember that data is a technical sampling (if subsampled) of a technical sampling (which DNA binds to sequencing flow cell), of a technical sampling (which DNA was amplified by PCR primers), of a technical sampling (which portion of a sample was extracted for DNA), of a biological sampling (one arbitrary sample collection from an individual). As such it is important to realize that if you were to analyze replicate samples at every step of the process you would end up with slightly different numbers (but hopefully the same trends). Even the same sequencing library sequenced multiple times will yield slightly different results. Some tools are more false positive prone then others, and some create better visualization than others. A great preprint contrasting a number of tools was recently published: [Microbiome differential abundance methods produce disturbingly different results across 38 datasets](https://www.biorxiv.org/content/10.1101/2021.05.10.443486v1).
+While there is not necessarily a single correct way to find significant taxa, there is certainly a wrong way: **Do not take raw sequence counts and do a series of uncorrected t-tests**. Remember that data is a technical sampling (if subsampled) of a technical sampling (which DNA binds to sequencing flow cell), of a technical sampling (which DNA was amplified by PCR primers), of a technical sampling (which portion of a sample was extracted for DNA), of a biological sampling (one arbitrary sample collection from an individual). As such it is important to realize that if you were to analyze replicate samples at every step of the process you would end up with slightly different numbers (but hopefully the same trends). Even the same sequencing library sequenced multiple times will yield slightly different results. Some tools are more false positive prone then others, and some create better visualization than others. A great preprint contrasting a number of tools was recently published: [Microbiome differential abundance methods produce disturbingly different results across 38 datasets](https://www.nature.com/articles/s41467-022-28034-z).
 
-It is also important to consider the nature of your dataset. In our case, we have a repeated sampling design over time, and as such it would not be kosher to treat every sample as an independent unit of measurement. As we used for the alpha diversity analysis, we will use a linear mixed effects model after applying a centered log ratio transformation which helps normalize the data to be appropriate for this analysis. An alternate approach which is conceptually similar is available in [ANCOMII](https://github.com/FrederickHuangLin/ANCOM).
+It is also important to consider the nature of your data set. In our case, we have a repeated sampling design over time, and as such it would not be kosher to treat every sample as an independent unit of measurement. As we used for the alpha diversity analysis, we will use a linear mixed effects model after applying a centered log ratio transformation which helps normalize the data to be appropriate for this analysis. An alternate approach which is conceptually similar is available in [ANCOMII](https://github.com/FrederickHuangLin/ANCOM).
 
 As a first step, we can remove features that are very rare as they won't be helpful and every additional test performed reduces our power to detect significant changes when we consider multiple testing corrects.
 
@@ -617,23 +631,25 @@ asv_table_filtered %>%
 Now we can filter for organisms which are significantly different between pre-diet and post-diet (the group term).
 
 ```{r}
-results<-
+clean_results<-
   results %>%
   filter(Term=="Grouppost-diet") %>%
   ungroup() %>%
   mutate(FDR=p.adjust(`Pr(>|t|)`, method="fdr")) %>%
   mutate(Significant=if_else(FDR<0.1 & abs(Estimate)>1, "Significant","ns")) %>%
   left_join(taxonomy %>% rownames_to_column("ASV"))
+
+interactive_table(clean_results)
 ```
 
-**Question: How many ASVs are signficantly higher in the post-diet group?**
+**Question: How many ASVs are significantly higher in the post-diet group?**
 
 **Question: What term would we look at if we were interested in the organisms which change over time differentially between groups?**
 
 One way to represent the this data for exploring the number of significant results is with a volcano plot where we plot fold change against P-value as below:
 
 ```{r}
-results %>%
+clean_results %>%
   ggplot(aes(x=Estimate, y=-log10(`Pr(>|t|)`), color=Significant)) +
   geom_point(alpha=0.5, shape=16) +
   xlab("log2(fold change)") +
@@ -644,7 +660,7 @@ results %>%
 ggsave("figures/volcanoplot.pdf", height=2, width=2)
 ```
 
-**Question: How many ASVs are signficantly higher in the post-diet group?**
+**Question: How many ASVs are significantly higher in the post-diet group?**
 
 **Question: Which ASVs do you think are most important?**
 
@@ -660,12 +676,12 @@ Your last task before class is over is to pick one of the ASVs that you think is
 </div>
 
 ```{r, echo=F, warning=F}
-asv_table_subsample %>%
+asv_table %>%
   make_clr() %>%
   as.data.frame() %>%
   rownames_to_column("ASV") %>%
   pivot_longer(!ASV, names_to="SampleID", values_to="CLR") %>%
-  filter(ASV=="ASV_22") %>%
+  filter(ASV=="ASV_41") %>%
   left_join(metadata) %>%
   ggplot(aes(x=Time_days, y=CLR, fill=Group)) +
   stat_summary(geom="ribbon", alpha=0.5) +
@@ -673,5 +689,9 @@ asv_table_subsample %>%
   theme_q2r() +
   scale_fill_manual(values=c("cornflowerblue","indianred")) +
   theme(legend.position="none")
-ggsave("figures/ASV22.pdf", height=2, width=2)
+ggsave("figures/ASV41.pdf", height=2, width=2)
+```
+
+```{r echo=F}
+save.image(file="Completed.Rdata")
 ```
